# gnome-shell-extension-desktop-icons-ng

./: HISTORY.md  README.md  export-zip.sh  extension.js  local_install.sh  meson.build  meson_post_install.py  metadata.json  refresh_extension.sh  ubuntu_install.sh
app/: meson.build
apparmor/: desktop-icons-ng.in  meson.build
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: 0005-remover-dialog-findfiles.patch  0006-adiciona-debug-switch.patch  POLICORP-chance-icon-size.patch  Workaround-double-enabled-bug.patch  add-string-to-be-translated.patch  series
debian/upstream/: metadata
po/: POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  ding.pot  es.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
