prefix = get_option('prefix')

extensions_dir = join_paths(prefix, 'share', 'gnome-shell', 'extensions', 'ding@rastersoft.com', 'app')

install_data([
    'autoAr.js',
    'askRenamePopup.js',
    'createThumbnail.js',
    'dbusInterfaces.js',
    'dbusUtils.js',
    'desktopGrid.js',
    'desktopIconItem.js',
    'desktopIconsUtil.js',
    'desktopManager.js',
    'ding.js',
    'enums.js',
    'fileItem.js',
    'fileItemMenu.js',
    'fileUtils.js',
    'notifyX11UnderWayland.js',
    'preferences.js',
    'prefswindow.js',
    'promiseUtils.js',
    'stackItem.js',
    'showErrorPopup.js',
    'signalManager.js',
    'stylesheet.css',
    'templatesScriptsManager.js',
    'thumbnails.js',
  ],
  install_dir: extensions_dir
)
